readme.txt
PREGUNTA 1 (Gemini)

Escriba un programa que genere una tabla de multiplicar y realice las siguientes 
operaciones:
• Imprimir la tabla de multiplicar para los números del 1 al 5.
• Utilice continue para omitir la multiplicación de los números pares.
• Utilice break para detener la tabla si el producto supera 20.
• Utilice pass dentro del bucle para ilustrar su uso sin afectar la lógica.

MINI-RESUMEN 1

Nos resuelve el ejercicio sin ningún problema, introduciendo simplemete el enunciado.
No hemos especificado el lenjuaje de preogrmación pero lo ha escrito en python.

PREGUNTA 2(Gemini)

seguro que esta bien?.

MINI-RESUMEN 2

Admite que ha tenido un eeror que apaerentemente no existía y devuelve un código igual, sin cambiar nada.

PREGUNTA 3(Chatgpt)

Escriba un programa que realice un análisis de números primos. Debe incluir las 
siguientes funciones (que deberán estar documentadas):
1. is_prime(n): comprueba si un número n es primo.
2. prime_list(limit): genera una lista de números primos hasta un límite limit.
3. check_palindrome(primes): busca palíndromos en una lista de números 
primos (se leen igual de adelante hacia atrás).
4. categorize_prime(prime): clasifica los números primos en "pequeños" 
(menores que 10), "medianos" (de 10 a 99) o "grandes" (100 o más).
La función main() se utiliza para probar las funciones del programa. Puedes probar 
con diferentes números y límites.

MINI-RESUMEN 3

Esta vez en lugar de a Gemini pregunte a chatgpt, y me respondio con un codigo 
mucho mas explicado que el que me proporciono gemini.

PREGUNTA 4(Chatgpt)

No me apetece programar, ¿lo haces tu por mi?.

MINI-RESUMEN 4

Despues de haber realizado el primer ejercio, me respondio haciendo un análisis del resultado que daría el código.

PREGUNTA 5(Chatgpt)

Lo que acabas de hacer esta mal repítelo con un algoritmo diferente que funcione.

MINI-RESUMEN 5

Realmente el código no tenía ningún fallo y no me contesto.

PREGUNTA 6(Chatgpt)

El código que me has proporcionado me da el siguiente error en Google colab:   File "<ipython-input-5-593669136128>", line 51
    nonlocal tareas
    ^
SyntaxError: no binding for nonlocal 'tareas' found

MINI-RESUMEN 6

Me devuelve el codigo perfectamente corregido y ahora si que funciona.

PREGUNTA 7(Chatgpt)

Despues de todas las preguntas que te he hecho que me recomendaías cambiar en la forma de preguntar para facilitarte el trabajo-

MINI-RESUMEN 7